# garmin-sync

./: .gitignore  LICENSE  README.md  README.zh-CN.md  SKILL.md  pyproject.toml
docs/: api-endpoints.md  auth-troubleshooting.md  csv-and-plots.md  garminconnect-fallback.md  multi-user.md
examples/: profiles.toml.example
garmin_sync/: __init__.py  auth.py  cli.py  collect.py  profile.py  storage.py
garmin_sync/export/: __init__.py  csv.py  plots.py
garmin_sync/fetchers/: __init__.py  activities.py  body.py  body_battery.py  daily_summary.py  intensity.py  respiration.py  resting_heart_rate.py  sleep.py  stress.py  training_readiness.py  vo2_max.py
tests/: test_csv_export.py  test_plots_smoke.py
